# DKBParsing

./: .gitignore  .pre-commit-config.yaml  README.md  my_categories.json  pyproject.toml
.cursor/rules/: python-data-parsing.mdc  security-privacy.mdc
.github/workflows/: ci.yml  dependency-update.yml  release.yml
examples/: categories.json  cli_config.json  household_template.txt  manual_assignments.json  system_prompt.txt  user_prompt.txt
scripts/: build_dkbparsing.sh
src/dkbparsing/: __init__.py  __main__.py  category_manager.py  cli.py  csv_parser.py  models.py  openrouter_client.py  output_formatter.py  parser.py
tests/: __init__.py  test_category_manager.py  test_cli.py  test_csv_parser.py  test_e2e.py  test_models.py  test_openrouter_client.py  test_output_formatter.py  test_parser.py
